# detector-camera

./: .gitignore  CMakeLists.txt  Dockerfile  build.sh  build_arm_container.sh  cmake_toolchain_arm.cmake  detector_camera.conf  detector_camera.conf.example  detector_camera.service  download_deps.sh  package.sh  run_arm_build_container.sh  setup.sh  setup_arm.sh
.github/workflows/: ccpp.yml
src/: main.cpp
src/api/: HttpApi.cpp  HttpApi.h
src/app/: Api.h  App.h  App.tpp  Config.h  Detection.h  Detector.h  DetectorAppException.h  Frame.h  Source.h
src/detectors/: TFLiteDetector.h  TFLiteDetector.tpp  YoloV2Detector.cpp  YoloV2Detector.h
src/sources/: OpenCVSource.cpp  OpenCVSource.h
src/util/: ThreadSafeQueue.h  ThreadSafeQueue.tpp  ThreadSafeQueueExeption.h  config.hpp  httplib.h  math.hpp
